# apartment_price_prediction

./: .gitignore  README.md  pyproject.toml
.snakemake/metadata/: ZGF0YS9leHRlcm5hbC9kYXRhX3Jhdy5jc3Y=
data/interim/: data_interim.csv  data_processed.csv
data/raw/: data_raw.csv
notebooks/: EDA.ipynb  Forecast.ipynb  сreate_dataset_from_sobstv.ipynb
src/data/: cian_api.py  cian_html.py  make_dataset.py  transform_dataset.py  сreate_dataset_from_sobstv.ipynb
src/data/download_data/: __init__.py  cian_api.py  cian_config.py  cian_html.py
workflow/: Snakefile
