[tool.poetry]
name = "apartment_price_prediction"
version = "0.1.0"
description = "Project for apartment price prediction in Saint-Petersburg"
authors = ["Anton Zakladniy <zakladniy.a@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<=3.10"
pandas = "^1.4.2"
numpy = "^1.22.3"
black = "^22.3.0"
jupyter = "^1.0.0"
snakemake = "^7.3.8"
click = "^8.1.2"
fake-headers = "^1.0.2"
nested-lookup = "^0.2.23"
environs = "^9.5.0"
tqdm = "^4.64.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"